# llm-slack-bot

./: .env.sample  .gitignore  Dockerfile  app.py  constants.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt  test.py
